--- a/docs.html
+++ b/docs.html
@@ -9538,6 +9538,18 @@ This endpoint also accepts embedded variants.</p>
 <td></td>
 </tr>
 <tr>
+<td><strong>hs_code</strong></td>
+<td>String</td>
+<td>Harmonized System Code</td>
+<td></td>
+</tr>
+<tr>
+<td><strong>country_of_origin</strong></td>
+<td>String</td>
+<td>Two letter country code (e.g. SG, US)</td>
+<td></td>
+</tr>
+<tr>
 <td><strong>initial_cost_price</strong></td>
 <td>String</td>
 <td>The initial item cost price of the variant, only available when first creating the variant</td>
@@ -13138,6 +13150,18 @@ https://api.tradegecko.com/users/1
 <td></td>
 </tr>
 <tr>
+<td><strong>hs_code</strong></td>
+<td>String</td>
+<td>Harmonized System Code</td>
+<td></td>
+</tr>
+<tr>
+<td><strong>country_of_origin</strong></td>
+<td>String</td>
+<td>Two letter country code (e.g. SG, US)</td>
+<td></td>
+</tr>
+<tr>
 <td><strong>initial_cost_price</strong></td>
 <td>String</td>
 <td>The initial item cost price of the variant, only available when first creating the variant</td>
@@ -13362,6 +13386,8 @@ https://api.tradegecko.com/variants/
     </span><span class="s2">&quot;buy_price&quot;</span><span class="p">:</span><span class="w"> </span><span class="s2">&quot;4.5&quot;</span><span class="p">,</span><span class="w">
     </span><span class="s2">&quot;committed_stock&quot;</span><span class="p">:</span><span class="w"> </span><span class="s2">&quot;3&quot;</span><span class="p">,</span><span class="w">
     </span><span class="s2">&quot;incoming_stock&quot;</span><span class="p">:</span><span class="w"> </span><span class="s2">&quot;0&quot;</span><span class="p">,</span><span class="w">
+    </span><span class="s2">&quot;hs_code&quot;</span><span class="p">:</span><span class="w"> </span><span class="s2">&quot;110100&quot;</span><span class="p">,</span><span class="w">
+    </span><span class="s2">&quot;country_of_origin&quot;</span><span class="p">:</span><span class="w"> </span><span class="s2">&quot;SG&quot;</span><span class="p">,</span><span class="w">
     </span><span class="s2">&quot;composite&quot;</span><span class="p">:</span><span class="w"> </span><span class="kc">null</span><span class="p">,</span><span class="w">
     </span><span class="s2">&quot;description&quot;</span><span class="p">:</span><span class="w"> </span><span class="kc">null</span><span class="p">,</span><span class="w">
     </span><span class="s2">&quot;keep_selling&quot;</span><span class="p">:</span><span class="w"> </span><span class="kc">false</span><span class="p">,</span><span class="w">
@@ -13438,6 +13464,8 @@ https://api.tradegecko.com/variants/
     </span><span class="s2">&quot;buy_price&quot;</span><span class="p">:</span><span class="w"> </span><span class="s2">&quot;4.5&quot;</span><span class="p">,</span><span class="w">
     </span><span class="s2">&quot;committed_stock&quot;</span><span class="p">:</span><span class="w"> </span><span class="s2">&quot;0&quot;</span><span class="p">,</span><span class="w">
     </span><span class="s2">&quot;incoming_stock&quot;</span><span class="p">:</span><span class="w"> </span><span class="s2">&quot;0&quot;</span><span class="p">,</span><span class="w">
+    </span><span class="s2">&quot;hs_code&quot;</span><span class="p">:</span><span class="w"> </span><span class="s2">&quot;110100&quot;</span><span class="p">,</span><span class="w">
+    </span><span class="s2">&quot;country_of_origin&quot;</span><span class="p">:</span><span class="w"> </span><span class="s2">&quot;SG&quot;</span><span class="p">,</span><span class="w">
     </span><span class="s2">&quot;composite&quot;</span><span class="p">:</span><span class="w"> </span><span class="kc">null</span><span class="p">,</span><span class="w">
     </span><span class="s2">&quot;description&quot;</span><span class="p">:</span><span class="w"> </span><span class="kc">null</span><span class="p">,</span><span class="w">
     </span><span class="s2">&quot;keep_selling&quot;</span><span class="p">:</span><span class="w"> </span><span class="kc">false</span><span class="p">,</span><span class="w">
@@ -13581,6 +13609,8 @@ https://api.tradegecko.com/variants/ -d <span class="s1">&#39;{&quot;variant&quo
   </span><span class="s2">&quot;buy_price&quot;</span><span class="p">:</span><span class="w"> </span><span class="s2">&quot;4.5&quot;</span><span class="p">,</span><span class="w">
   </span><span class="s2">&quot;committed_stock&quot;</span><span class="p">:</span><span class="w"> </span><span class="s2">&quot;3&quot;</span><span class="p">,</span><span class="w">
   </span><span class="s2">&quot;incoming_stock&quot;</span><span class="p">:</span><span class="w"> </span><span class="s2">&quot;0&quot;</span><span class="p">,</span><span class="w">
+  </span><span class="s2">&quot;hs_code&quot;</span><span class="p">:</span><span class="w"> </span><span class="s2">&quot;110100&quot;</span><span class="p">,</span><span class="w">
+  </span><span class="s2">&quot;country_of_origin&quot;</span><span class="p">:</span><span class="w"> </span><span class="s2">&quot;SG&quot;</span><span class="p">,</span><span class="w">
   </span><span class="s2">&quot;composite&quot;</span><span class="p">:</span><span class="w"> </span><span class="kc">null</span><span class="p">,</span><span class="w">
   </span><span class="s2">&quot;description&quot;</span><span class="p">:</span><span class="w"> </span><span class="kc">null</span><span class="p">,</span><span class="w">
   </span><span class="s2">&quot;keep_selling&quot;</span><span class="p">:</span><span class="w"> </span><span class="kc">false</span><span class="p">,</span><span class="w">
@@ -13690,6 +13720,18 @@ https://api.tradegecko.com/variants/ -d <span class="s1">&#39;{&quot;variant&quo
 <td><strong>description</strong></td>
 <td>String</td>
 <td></td>
+<td></td>
+</tr>
+<tr>
+<td><strong>hs_code</strong></td>
+<td>String</td>
+<td>Harmonized System Code</td>
+<td></td>
+</tr>
+<tr>
+<td><strong>country_of_origin</strong></td>
+<td>String</td>
+<td>Two letter country code (e.g. SG, US)</td>
 <td></td>
 </tr>
 <tr>
@@ -13859,6 +13901,8 @@ https://api.tradegecko.com/variants/1
   </span><span class="s2">&quot;buy_price&quot;</span><span class="p">:</span><span class="w"> </span><span class="s2">&quot;4.5&quot;</span><span class="p">,</span><span class="w">
   </span><span class="s2">&quot;committed_stock&quot;</span><span class="p">:</span><span class="w"> </span><span class="s2">&quot;3&quot;</span><span class="p">,</span><span class="w">
   </span><span class="s2">&quot;incoming_stock&quot;</span><span class="p">:</span><span class="w"> </span><span class="s2">&quot;0&quot;</span><span class="p">,</span><span class="w">
+  </span><span class="s2">&quot;hs_code&quot;</span><span class="p">:</span><span class="w"> </span><span class="s2">&quot;110100&quot;</span><span class="p">,</span><span class="w">
+  </span><span class="s2">&quot;country_of_origin&quot;</span><span class="p">:</span><span class="w"> </span><span class="s2">&quot;SG&quot;</span><span class="p">,</span><span class="w">
   </span><span class="s2">&quot;composite&quot;</span><span class="p">:</span><span class="w"> </span><span class="kc">null</span><span class="p">,</span><span class="w">
   </span><span class="s2">&quot;description&quot;</span><span class="p">:</span><span class="w"> </span><span class="kc">null</span><span class="p">,</span><span class="w">
   </span><span class="s2">&quot;keep_selling&quot;</span><span class="p">:</span><span class="w"> </span><span class="kc">false</span><span class="p">,</span><span class="w">
