publish: Tweak a little emore
generated from commit ca1e8327e044a3892b0fa4e48fbc24b8e2af085c

--- a/docs.html
+++ b/docs.html
@@ -1557,7 +1557,7 @@ This can be done by adding an <code>include</code> parameter containing a comma-
 </tr>
 <tr>
 <td>503</td>
-<td>Service Unavailable (Time out) -- The server is overloaded or down for maintenance</td>
+<td>Service Unavailable (Time out) -- The server was unable to finish the request in time, either the server was overloaded or if fetching large pages of data, please try using a smaller page size</td>
 </tr>
 </tbody></table>
 
