publish: [TYPO] Remove extra quote
generated from commit 8faa10f571786bd8ca3b0a0dbae90ed4b48db91e

--- a/docs.html
+++ b/docs.html
@@ -14558,7 +14558,7 @@ https://api.tradegecko.com/webhooks/ -d <span class="s1">&#39;{&quot;webhook&quo
 </tr>
 <tr>
 <td>company</td>
-<td>company.create, company.update</td>
+<td>company.create, company.update, company.destroy</td>
 </tr>
 <tr>
 <td>contact</td>
@@ -14594,7 +14594,7 @@ https://api.tradegecko.com/webhooks/ -d <span class="s1">&#39;{&quot;webhook&quo
 </tr>
 <tr>
 <td>product</td>
-<td>product.create</td>
+<td>product.create, product.destroy</td>
 </tr>
 <tr>
 <td>procurement</td>
