--- a/docs.html
+++ b/docs.html
@@ -1550,7 +1550,7 @@ This can be done by adding an <code>include</code> parameter containing a comma-
 </tr>
 <tr>
 <td>401</td>
-<td>Unauthorized -- Your API key is incorrect</td>
+<td>Unauthorized -- Your API access token is invalid</td>
 </tr>
 <tr>
 <td>402</td>
