--- a/changes.html
+++ b/changes.html
@@ -229,7 +229,9 @@
 
 <p>If anything is missing or seems incorrect, please check the <a href="https://github.com/tradegecko/smaug/issues">GitHub issues</a>
 for existing known issues or <a href="https://github.com/tradegecko/smaug/issues/new">create a new issue</a>.</p>
-<h2 id='changelog'>Changelog</h2><h3 id='apr-2019-pagination-cleanup-amp-line-item-filters'>Apr 2019 - Pagination Cleanup &amp; Line Item Filters</h3>
+<h2 id='changelog'>Changelog</h2><h3 id='feb-2020-composition-api-release'>Feb 2020 - Composition API Release</h3>
+<p>In order to provide a simpler way to fetch packsize and bundle decomposition information, we&#39;ve exposed a brand new API.</p>
+<h3 id='apr-2019-pagination-cleanup-amp-line-item-filters'>Apr 2019 - Pagination Cleanup &amp; Line Item Filters</h3>
 <p>In order to provide a great experience to all our API users we&#39;ve made some changes to our pagination.
 The default page size is now 50 items (down from 100), with a max page size up to 250.</p>
 
@@ -252,10 +254,10 @@ All of the changes are backwards compatible.</p>
 <p>The related changes to the APIs are:</p>
 
 <ul>
-<li>Added: <code>Product#image_ids</code>.<br></li>
-<li>Added: <code>Image#product_id</code>.<br></li>
-<li>Added: <code>Image#variant_ids</code>.<br></li>
-<li>Deprecated: <code>Image#variant_id</code> now returns the image&#39;s first variant.<br></li>
+<li>Added: <code>Product#image_ids</code>.</li>
+<li>Added: <code>Image#product_id</code>.</li>
+<li>Added: <code>Image#variant_ids</code>.</li>
+<li>Deprecated: <code>Image#variant_id</code> now returns the image&#39;s first variant.</li>
 </ul>
 <h2 id='api-deprecations'>API Deprecations</h2>
 <p>There are a few edge cases of the API that we will be removing as we hit 1.0.
