publish: Merge pull request #92 from tradegecko/ryancyq-patch-1
generated from commit 7c6cbce70295cbad1d3bcb2cba46639db59f2407

--- a/docs.html
+++ b/docs.html
@@ -7008,7 +7008,7 @@ https://api.tradegecko.com/invoice_line_items/1
 <tr>
 <td><strong>label</strong></td>
 <td>String</td>
-<td></td>
+<td>A unique name among &#39;active&#39; locations</td>
 <td></td>
 </tr>
 <tr>
@@ -7193,7 +7193,7 @@ https://api.tradegecko.com/locations/ -d <span class="s1">&#39;{&quot;location&q
 <tr>
 <td><strong>label</strong></td>
 <td>String</td>
-<td></td>
+<td>A unique name among &#39;active&#39; locations</td>
 <td>true</td>
 </tr>
 <tr>
