--- a/index.html
+++ b/index.html
@@ -311,8 +311,8 @@
         </div>
         <div class="study-card secondary-card">
           <div class="study-blurb">
-            <h2>Dedicated Support</h2>
-            <p>Get dedicated developer support through our forum or by contacting our support team.</p>
+            <h2>Knowledge and Support</h2>
+            <p>Detailed articles and getting started modules covering all areas of the TradeGecko product.</p>
             <a href="https://support.tradegecko.com" class="plain-link card__sticky-button" >
               Learn more <i class="fa fa-angle-right"></i>
             </a>
