publish: Added new webhooks
generated from commit e05cf660bae6ad3b1fdbe33f694688f0284b6d4c

--- a/changes.html
+++ b/changes.html
@@ -229,7 +229,9 @@
 
 <p>If anything is missing or seems incorrect, please check the <a href="https://github.com/tradegecko/smaug/issues">GitHub issues</a>
 for existing known issues or <a href="https://github.com/tradegecko/smaug/issues/new">create a new issue</a>.</p>
-<h2 id='changelog'>Changelog</h2><h3 id='april-2020'>April 2020</h3>
+<h2 id='changelog'>Changelog</h2><h3 id='june-2020'>June 2020</h3>
+<p>Added new &quot;FulfillmentReturn Received&quot;, and &quot;Invoice Destroy&quot; webhooks.</p>
+<h3 id='april-2020'>April 2020</h3>
 <p>Added new &quot;PurchaseOrder Received&quot; webhook.</p>
 <h3 id='feb-2020-composition-api-release'>Feb 2020 - Composition API Release</h3>
 <p>In order to provide a simpler way to fetch packsize and bundle decomposition information, we&#39;ve exposed a brand new API.</p>
