--- a/docs.html
+++ b/docs.html
@@ -14755,11 +14755,11 @@ https://api.tradegecko.com/webhooks/ -d <span class="s1">&#39;{&quot;webhook&quo
 </tr>
 <tr>
 <td>fulfillment_return</td>
-<td>fulfillment_return.create</td>
+<td>fulfillment_return.create, fulfillment_return.received</td>
 </tr>
 <tr>
 <td>invoice</td>
-<td>invoice.create</td>
+<td>invoice.create, invoice.destroy</td>
 </tr>
 <tr>
 <td>location</td>
