publish: Merge pull request #101 from tradegecko/enhancement/composition-component-filter
generated from commit 26e25217d89abe8ed6969b5dc0e1b44327eba24f

--- a/changes.html
+++ b/changes.html
@@ -231,6 +231,8 @@
 for existing known issues or <a href="https://github.com/tradegecko/smaug/issues/new">create a new issue</a>.</p>
 <h2 id='changelog'>Changelog</h2><h3 id='june-2020'>June 2020</h3>
 <p>Added new &quot;FulfillmentReturn Received&quot;, and &quot;Invoice Destroy&quot; webhooks.</p>
+
+<p>Added new <code>component_id</code> array filter for Composition index endpoint.</p>
 <h3 id='april-2020'>April 2020</h3>
 <p>Added new &quot;PurchaseOrder Received&quot; webhook.</p>
 <h3 id='feb-2020-composition-api-release'>Feb 2020 - Composition API Release</h3>
