--- a/docs.html
+++ b/docs.html
@@ -3350,6 +3350,10 @@ https://api.tradegecko.com/variants/composition/
 <td><strong>bundle_sku</strong></td>
 <td>Filter by Bundle SKU via <code>sku</code> parameter</td>
 </tr>
+<tr>
+<td><strong>component_id</strong></td>
+<td>An Array of Component IDs</td>
+</tr>
 </tbody></table>
 
 <h3 id='http-request'>HTTP Request:</h3>
