publish: Merge pull request #113 from tradegecko/lunr-search
generated from commit ca2e008d7c3c9f11d3f05e1a5795cb15357524fb

--- a/changes.html
+++ b/changes.html
@@ -229,7 +229,9 @@
 
 <p>If anything is missing or seems incorrect, please check the <a href="https://github.com/tradegecko/smaug/issues">GitHub issues</a>
 for existing known issues or <a href="https://github.com/tradegecko/smaug/issues/new">create a new issue</a>.</p>
-<h2 id='changelog'>Changelog</h2><h3 id='june-2020'>June 2020</h3>
+<h2 id='changelog'>Changelog</h2><h3 id='july-2020'>July 2020</h3>
+<p>Added new Payment Method endpoint.</p>
+<h3 id='june-2020'>June 2020</h3>
 <p>Added new &quot;FulfillmentReturn Received&quot;, and &quot;Invoice Destroy&quot; webhooks.</p>
 
 <p>Added new <code>component_id</code> array filter for Composition index endpoint.</p>
