publish: Merge pull request #116 from tradegecko/tweak/sort-order-message-for-line-items
generated from commit 1415c918c450e67f9d37c1c9926bee362537a63d

--- a/docs.html
+++ b/docs.html
@@ -4919,7 +4919,7 @@ https://api.tradegecko.com/fulfillment_line_items/
   </span><span class="p">]</span><span class="w">
 </span><span class="p">}</span><span class="w">
 </span></code></pre>
-<p>Returns a list of fulfillment_line_items you’ve previously created. The fulfillment_line_items are returned in sorted order, with the most recent fulfillment_line_items appearing first.</p>
+<p>Returns a list of fulfillment_line_items you’ve previously created. The fulfillment_line_items are returned in sorted order, based on the position attribute.</p>
 
 <h3 id='filters'>Filters</h3>
 
@@ -5685,7 +5685,7 @@ https://api.tradegecko.com/fulfillment_return_line_items/
   </span><span class="p">]</span><span class="w">
 </span><span class="p">}</span><span class="w">
 </span></code></pre>
-<p>Returns a list of fulfillment_return_line_items you’ve previously created. The fulfillment_return_line_items are returned in sorted order, with the most recent fulfillment_return_line_items appearing first.</p>
+<p>Returns a list of fulfillment_return_line_items you’ve previously created. The fulfillment_return_line_items are returned in sorted order, based on the position attribute.</p>
 
 <h3 id='filters'>Filters</h3>
 
@@ -6869,7 +6869,7 @@ https://api.tradegecko.com/invoice_line_items/
   </span><span class="p">]</span><span class="w">
 </span><span class="p">}</span><span class="w">
 </span></code></pre>
-<p>Returns a list of invoice_line_items you’ve previously created. The invoice_line_items are returned in sorted order, with the most recent invoice_line_items appearing first.</p>
+<p>Returns a list of invoice_line_items you’ve previously created. The invoice_line_items are returned in sorted order, based on the position attribute.</p>
 
 <h3 id='filters'>Filters</h3>
 
@@ -8971,7 +8971,7 @@ https://api.tradegecko.com/order_line_items/
   </span><span class="p">]</span><span class="w">
 </span><span class="p">}</span><span class="w">
 </span></code></pre>
-<p>Returns a list of order_line_items you’ve previously created. The order_line_items are returned in sorted order, with the most recent order_line_items appearing first.</p>
+<p>Returns a list of order_line_items you’ve previously created. The order_line_items are returned in sorted order, based on the position attribute.</p>
 
 <h3 id='filters'>Filters</h3>
 
@@ -11413,7 +11413,7 @@ https://api.tradegecko.com/purchase_order_line_items/
   </span><span class="p">]</span><span class="w">
 </span><span class="p">}</span><span class="w">
 </span></code></pre>
-<p>Returns a list of purchase_order_line_items you’ve previously created. The purchase_order_line_items are returned in sorted order, with the most recent purchase_order_line_items appearing first.</p>
+<p>Returns a list of purchase_order_line_items you’ve previously created. The purchase_order_line_items are returned in sorted order, based on the position attribute.</p>
 
 <h3 id='filters'>Filters</h3>
 
@@ -12133,7 +12133,7 @@ https://api.tradegecko.com/stock_adjustment_line_items/
   </span><span class="p">]</span><span class="w">
 </span><span class="p">}</span><span class="w">
 </span></code></pre>
-<p>Returns a list of stock_adjustment_line_items you’ve previously created. The stock_adjustment_line_items are returned in sorted order, with the most recent stock_adjustment_line_items appearing first.</p>
+<p>Returns a list of stock_adjustment_line_items you’ve previously created. The stock_adjustment_line_items are returned in sorted order, based on the position attribute.</p>
 
 <h3 id='filters'>Filters</h3>
 
@@ -12929,7 +12929,7 @@ https://api.tradegecko.com/stock_transfer_line_items/
   </span><span class="p">]</span><span class="w">
 </span><span class="p">}</span><span class="w">
 </span></code></pre>
-<p>Returns a list of stock_transfer_line_items you’ve previously created. The stock_transfer_line_items are returned in sorted order, with the most recent stock_transfer_line_items appearing first.</p>
+<p>Returns a list of stock_transfer_line_items you’ve previously created. The stock_transfer_line_items are returned in sorted order, based on the position attribute.</p>
 
 <h3 id='filters'>Filters</h3>
 
